# TensorRT-Edge-LLM-Bazel

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  README.md  WORKSPACE  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
cpp/: BUILD.bazel  CMakeLists.txt
cpp/builder/: actionBuilder.cpp  actionBuilder.h  audioBuilder.cpp  audioBuilder.h  builderUtils.cpp  builderUtils.h  visualBuilder.cpp
cpp/common/: bindingNames.h  cudaMacros.h  trtUtils.h  utf8.cpp  utf8.h  version.h
cpp/kernels/common/: vectorizedTypes.cuh
cpp/kernels/contextAttentionKernels/: contextFMHARunner.cpp  cuteDslFMHARunner.cpp  cuteDslFMHARunner.h  flexibleContextAttention.cu  flexibleContextAttention.h  flexibleContextAttentionRunner.cpp  flexibleContextAttentionRunner.h  utilKernels.cu  utilKernels.h
cpp/kernels/contextAttentionKernels/cubin/: fmha_cubin.h  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm120.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm121.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm80.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm86.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm87.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_k_v_256_sm89.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_256_sm100.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_256_sm101.cubin.cpp  fmha_v2_flash_attention_fp16_fp32_64_128_S_q_kv_256_sm120.cubin.cpp  (+21 more)
cpp/kernels/decodeAttentionKernels/: decoderXQARunner.cpp  decoderXQARunner.h
cpp/kernels/embeddingKernels/: embeddingKernels.cu  embeddingKernels.h
cpp/kernels/gdn/: gatedDeltaNetGemm.cu  gatedDeltaNetGemm.h  gatedDeltaNetKernel.cu  gatedDeltaNetKernel.cuh
cpp/kernels/gdnKernels/: cuteDslGDNRunner.cpp  cuteDslGDNRunner.h  cutedsl_cuda_runtime_library_shim.c  gdnKernelUtils.cu  gdnKernelUtils.cuh
cpp/kernels/kvCacheUtilKernels/: kvCacheUtilsKernels.cu  kvCacheUtilsKernels.h
cpp/kernels/mamba/: causalConv1d.cu  causalConv1d.h  cuteDslSSDRunner.cpp  cuteDslSSDRunner.h  selectiveStateUpdate.cu  selectiveStateUpdate.h
cpp/kernels/moe/: NvFP4MoEContiguousGemmRunner.cpp  NvFP4MoEContiguousGemmRunner.h  NvFP4MoEFC2FinalizeRunner.cpp  NvFP4MoEFC2FinalizeRunner.h  NvFP4MoEUtils.h  moeSigmoidGroupTopkKernels.cu  moeSigmoidGroupTopkKernels.h
cpp/kernels/posEncoding/: applyRopeWriteKV.cu  applyRopeWriteKV.h  initializeCosSinCache.cu  initializeCosSinCache.h
cpp/kernels/speculative/: batchEvictKernels.cu  batchEvictKernels.h  eagleUtilKernels.cu  eagleUtilKernels.h
cpp/kernels/talkerMLPKernels/: cuteDslGemmRunner.cu  cuteDslGemmRunner.h  talkerMLPKernels.cu  talkerMLPKernels.h
cpp/multimodal/: audioRunner.cpp  audioRunner.h  code2WavRunner.cpp  code2WavRunner.h  imageUtils.cpp  internViTRunner.cpp  modelTypes.h  multimodalRunner.cpp  nemotronOmniAudioRunner.cpp  nemotronOmniAudioRunner.h  nemotronOmniViTRunner.cpp  nemotronOmniViTRunner.h  phi4mmViTRunner.cpp  qwenViTRunner.cpp  qwenViTRunner.h
cpp/plugins/attentionPlugin/: attentionPlugin.cpp  attentionPlugin.h
cpp/plugins/gatedDeltaNet/: gatedDeltaNetPlugin.cpp  gatedDeltaNetPlugin.h
cpp/plugins/gdnPlugin/: gatedDeltaRulePlugin.cpp  gatedDeltaRulePlugin.h  gdnCausalConv1dPlugin.cpp  gdnCausalConv1dPlugin.h
cpp/plugins/int4MoePlugin/: int4MoePlugin.cpp
cpp/plugins/mamba/: causalConv1dPlugin.cpp  causalConv1dPlugin.h  mambaPlugin.cpp
cpp/plugins/nvfp4MoePlugin/: nvfp4MoePlugin.cpp  nvfp4MoePlugin.h
cpp/profiling/: nvtx_wrapper.h
cpp/runtime/: eagleDraftEngineRunner.cpp  hybridCacheManager.cpp  hybridCacheManager.h  imageUtils.cpp  imageUtils.h  kvCacheManager.cpp  kvCacheManager.h  llmEngineRunner.cpp  llmInferenceRuntime.cpp  llmRuntimeUtils.cpp  llmRuntimeUtils.h  mambaCacheManager.cpp  mambaCacheManager.h  qwen3OmniTTSRuntime.cpp  qwen3OmniTTSRuntime.h  streaming.cpp  streaming.h
cpp/sampler/: samplingUtils.cpp
cpp/tokenizer/: tokenizer.cpp  tokenizerUtils.cpp
examples/: BUILD.bazel
examples/accuracy/: README.md  requirements.txt
examples/accuracy/example_datasets/: audio_eval_utils.py  edgellm_dataset.py  omnibench.py  tts_eval.py
examples/accuracy/scripts/: calculate_correctness.py  calculate_tts_score.py  prepare_dataset.py
examples/llm/: CMakeLists.txt  llm_bench.cpp  llm_inference.cpp  llm_stream.cpp
examples/multimodal/: CMakeLists.txt  action_build.cpp
examples/omni/: CMakeLists.txt
examples/utils/: benchLogger.cpp  benchLogger.h  benchRunner.h  requestFileParser.cpp  requestFileParser.h
unittests/: BUILD.bazel  batchEvictKernelTests.cu  contextAttentionTest.cpp  contextAttentionUtilKernelTests.cpp  cuteDslFMHARunnerTest.cpp  eagleUtilkernelTests.cu  embeddingLookupTests.cpp  gatedDeltaNetKernelTests.cu  gdnCuteDslTests.cu  generateMultimodalIndicesTest.cpp  hybridCacheManagerTests.cpp  kvCacheUtilKernelTests.cpp  mambaCausalConv1dTests.cu  mambaSelectiveStateUpdateTests.cu  moeSigmoidGroupTopkKernelTests.cpp  nvfp4MoERunnerTest.cpp  nvfp4MoESupportKernelTest.cu  nvfp4MoeDecodeTest.cu  references.cpp  references.h  ropeInitializeTests.cu  ropeWriteKvTest.cpp  samplingTests.cpp  splitKVConversionTest.cpp  ssdCuteDslTests.cu  streamingTests.cpp  talkerMLPKernelTests.cpp  xqaAttentionDecodingTest.cu  xqaTreeAttentionDecodingTest.cu
unittests/plugins/: BUILD.bazel  gatedDeltaRulePluginTests.cpp  gdnCausalConv1dPluginTests.cpp  generate_test_resources.py
unittests/resources/: gated_delta_rule_1b_1s_8h_64k_128v_decode_asym.safetensors  gated_delta_rule_1b_1s_8h_64k_64v_decode.safetensors  gated_delta_rule_1b_4s_16h_128k_128v_prefill.safetensors  gated_delta_rule_1b_8s_16h_128k_128v_prefill_with_state.safetensors  gated_delta_rule_2b_16s_8h_64k_64v_prefill_batch2.safetensors  gdn_causal_conv1d_1b_16d_1s_4k_decode.safetensors  gdn_causal_conv1d_1b_32d_4s_4k_prefill.safetensors  gdn_causal_conv1d_2b_64d_16s_3k_prefill.safetensors
(+648 files in other folders)
