load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "common_cpp_srcs",
    srcs = glob(
        ["common/**/*.cpp"],
        exclude = ["common/mmapReader.cpp"],
    ) + ["common/mmapReader.cpp"],
)

filegroup(
    name = "kernels_cpp_srcs",
    srcs = glob(["kernels/**/*.cpp"]),
)

filegroup(
    name = "kernels_cu_srcs",
    srcs = glob(
        [
            "kernels/**/*.cu",
            "kernels/**/*.cuh",
        ],
        exclude = [
            "kernels/**/marlin_moe_wna16/ops.cu",
            "kernels/**/marlin_moe_wna16/sm80_kernel_float16_u4_float16.cu",
        ],
    ),
)

filegroup(
    name = "moe_marlin_cu_srcs",
    srcs = glob(["kernels/moe/moe_marlin/**/*.cu"]),
)

filegroup(
    name = "sampler_cu_srcs",
    srcs = glob(["sampler/**/*.cu"]),
)

filegroup(
    name = "multimodal_cpp_srcs",
    srcs = glob(["multimodal/**/*.cpp"]),
)

filegroup(
    name = "runtime_cpp_srcs",
    srcs = glob(["runtime/**/*.cpp"]),
)

filegroup(
    name = "profiler_cpp_srcs",
    srcs = glob(["profiling/**/*.cpp"]),
)

filegroup(
    name = "tokenizer_cpp_srcs",
    srcs = glob(["tokenizer/**/*.cpp"]),
)

filegroup(
    name = "builder_cpp_srcs",
    srcs = glob(["builder/**/*.cpp"]),
)

filegroup(
    name = "plugin_cpp_srcs",
    srcs = glob(["plugins/**/*.cpp"]),
)

_COMMON_INCLUDE_DIRS = ["."]

_CUDA_COMMON_COPTS = [
    "--expt-relaxed-constexpr",
    "-t 0",
]

_COMMON_COPTS = [
    "-Wall",
    "-Wextra",
    "-Wno-deprecated",
    "-Wno-unused-parameter",
    "-Wno-unknown-pragmas",
    "-fPIC",
]

_DL_LINKOPTS = ["-ldl"]

_AARCH64_CROSS_LINKOPTS = select({
    "@platforms//cpu:aarch64": [
        "-L/usr/local/cuda/targets/aarch64-linux/lib",
        "-L/usr/local/cuda/targets/aarch64-linux/lib/stubs",
        "-Wl,--unresolved-symbols=ignore-in-shared-libs",
    ],
    "//conditions:default": [],
})

_FMHA_EXCLUDE_DEFINES = select({
    "//:cuda_arch_sm80": [
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm86": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm87": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm89": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm100": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm101": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm120": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm121": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
    ],
    "//conditions:default": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
})

cuda_library(
    name = "edgellm_kernels_cuda",
    srcs = [":kernels_cu_srcs"],
    hdrs = glob([
        "common/*.h",
        "kernels/**/*.h",
    ]),
    copts = _CUDA_COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    host_copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    rdc = True,
    deps = [
        "@cuda",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_kernels_cpp",
    srcs = [
        ":common_cpp_srcs",
        ":kernels_cpp_srcs",
    ],
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    deps = [
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_kernels",
    deps = [
        ":edgellm_kernels_cpp",
        ":edgellm_kernels_cuda",
    ],
)

cuda_library(
    name = "edgellm_core_cuda",
    srcs = [
        ":kernels_cu_srcs",
        ":sampler_cu_srcs",
    ],
    hdrs = glob([
        "common/*.h",
        "kernels/**/*.h",
    ]),
    copts = _CUDA_COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    host_copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    rdc = True,
    deps = [
        "@cuda",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_core_cpp",
    srcs = [
        ":common_cpp_srcs",
        ":kernels_cpp_srcs",
        ":multimodal_cpp_srcs",
        ":profiler_cpp_srcs",
        ":runtime_cpp_srcs",
    ],
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _DL_LINKOPTS,
    deps = [
        "//:stb_image",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_core",
    deps = [
        ":edgellm_core_cpp",
        ":edgellm_core_cuda",
    ],
)

cc_library(
    name = "edgellm_tokenizer",
    srcs = [":tokenizer_cpp_srcs"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    deps = [
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_builder",
    srcs = [
        ":builder_cpp_srcs",
        ":common_cpp_srcs",
    ],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _DL_LINKOPTS,
    deps = [
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_binary(
    name = "NvInfer_edgellm_plugin",
    srcs = [":plugin_cpp_srcs"],
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    linkshared = True,
    deps = [
        ":edgellm_kernels",
        "@tensorrt",
    ],
)

filegroup(
    name = "tensorrt_edge_llm",
    srcs = [
        ":NvInfer_edgellm_plugin",
        ":edgellm_builder",
        ":edgellm_core",
        ":edgellm_kernels",
        ":edgellm_tokenizer",
    ],
    visibility = ["//visibility:public"],
)
