load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

# Build setting for enabling static plugin linking
# Usage: bazel build //examples:llm_build --//cpp:static_plugin=true
bool_flag(
    name = "static_plugin",
    build_setting_default = False,
)

config_setting(
    name = "static_plugin_enabled",
    flag_values = {
        ":static_plugin": "true",
    },
)

filegroup(
    name = "common_cpp_srcs",
    srcs = glob(["common/**/*.cpp"]),
)

filegroup(
    name = "kernels_cpp_srcs",
    srcs = glob(["kernels/**/*.cpp"]),
)

filegroup(
    name = "kernels_cu_srcs",
    srcs = glob(
        [
            "kernels/**/*.cu",
            "kernels/**/*.cuh",
        ],
        exclude = [
            "kernels/**/marlin_moe_wna16/ops.cu",
            "kernels/**/marlin_moe_wna16/sm80_kernel_float16_u4_float16.cu",
        ],
    ),
)

filegroup(
    name = "moe_marlin_cu_srcs",
    srcs = glob(["kernels/moe/moe_marlin/**/*.cu"]),
)

filegroup(
    name = "sampler_cu_srcs",
    srcs = glob(["sampler/**/*.cu"]),
)

filegroup(
    name = "multimodal_cpp_srcs",
    srcs = glob(["multimodal/**/*.cpp"]),
)

filegroup(
    name = "plugin_cpp_srcs",
    srcs = glob(["plugins/**/*.cpp"]),
)

_COMMON_INCLUDE_DIRS = ["."]

_CUDA_COMMON_COPTS = [
    "--expt-relaxed-constexpr",
    "-t 0",
]

_COMMON_COPTS = select({
    "@platforms//os:windows": [
        "/wd4100",
        "/wd4244",
        "/wd4505",
    ],
    "//conditions:default": [
        "-Wall",
        "-Wextra",
        "-Wno-deprecated",
        "-Wno-unused-parameter",
        "-Wno-unknown-pragmas",
        "-fPIC",
    ],
})

_DL_LINKOPTS = select({
    "@platforms//os:windows": [],
    "//conditions:default": ["-ldl"],
})

_AARCH64_CROSS_LINKOPTS = select({
    "@platforms//cpu:aarch64": [
        "-L/usr/local/cuda/targets/aarch64-linux/lib",
        "-L/usr/local/cuda/targets/aarch64-linux/lib/stubs",
        "-Wl,--unresolved-symbols=ignore-in-shared-libs",
    ],
    "//conditions:default": [],
})

_FMHA_EXCLUDE_DEFINES = select({
    "//:cuda_arch_sm80": [
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm86": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm87": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm89": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm100": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm101": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm120": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_121",
    ],
    "//:cuda_arch_sm121": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_89",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
    ],
    "//conditions:default": [
        "EXCLUDE_SM_80",
        "EXCLUDE_SM_86",
        "EXCLUDE_SM_87",
        "EXCLUDE_SM_100",
        "EXCLUDE_SM_101",
        "EXCLUDE_SM_120",
        "EXCLUDE_SM_121",
    ],
})

cuda_library(
    name = "edgellm_kernels_cuda",
    srcs = [":kernels_cu_srcs"],
    hdrs = glob([
        "common/*.h",
        "kernels/**/*.h",
    ]),
    copts = _CUDA_COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    host_copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    rdc = True,
    deps = [
        "@cuda",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_kernels_cpp",
    srcs = [
        ":common_cpp_srcs",
        ":kernels_cpp_srcs",
    ],
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    deps = [
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_kernels",
    deps = [
        ":edgellm_kernels_cpp",
        ":edgellm_kernels_cuda",
    ],
)

cuda_library(
    name = "edgellm_core_cuda",
    srcs = [
        ":kernels_cu_srcs",
        ":sampler_cu_srcs",
    ],
    hdrs = glob([
        "common/*.h",
        "kernels/**/*.h",
    ]),
    copts = _CUDA_COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    host_copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    rdc = True,
    deps = [
        "@cuda",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_core_cpp",
    srcs = glob([
        "profiling/**/*.cpp",
        "runtime/**/*.cpp",
    ]) + [
        ":common_cpp_srcs",
        ":kernels_cpp_srcs",
        ":multimodal_cpp_srcs",
    ],
    hdrs = glob([
        "profiling/**/*.h",
        "runtime/**/*.h",
    ]),
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _DL_LINKOPTS,
    deps = [
        "//:stb_image",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_core",
    deps = [
        ":edgellm_core_cpp",
        ":edgellm_core_cuda",
    ],
)

cc_library(
    name = "edgellm_tokenizer",
    srcs = glob(["tokenizer/**/*.cpp"]),
    hdrs = glob(["tokenizer/**/*.h"]),
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    deps = [
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_builder",
    srcs = glob(["builder/**/*.cpp"]) + [":common_cpp_srcs"],
    hdrs = glob(["builder/**/*.h"]),
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _DL_LINKOPTS,
    deps = [
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_library(
    name = "edgellm_plugins_static",
    srcs = [":plugin_cpp_srcs"],
    hdrs = glob(["plugins/**/*.h"]),
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    deps = [
        ":edgellm_kernels",
        "@tensorrt",
    ],
    alwayslink = True,
)

cc_binary(
    name = "NvInfer_edgellm_plugin",
    srcs = [":plugin_cpp_srcs"],
    copts = _COMMON_COPTS,
    defines = _FMHA_EXCLUDE_DEFINES,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    linkshared = True,
    deps = [
        ":edgellm_kernels",
        "@tensorrt",
    ],
)

filegroup(
    name = "tensorrt_edge_llm",
    srcs = [
        ":NvInfer_edgellm_plugin",
        ":edgellm_builder",
        ":edgellm_core",
        ":edgellm_kernels",
        ":edgellm_tokenizer",
    ],
    visibility = ["//visibility:public"],
)
