# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES.
# All rights reserved. SPDX-License-Identifier: LicenseRef-NvidiaProprietary

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_COMMON_INCLUDE_DIRS = [
    ".",
    "utils",
    "../cpp",
    "../cpp/common",
    "../examples/multimodal",
    "../3rdParty/stb",
]

_COMMON_COPTS = [
    "-Wall",
    "-Wextra",
    "-Wno-unknown-pragmas",
    "-Wno-deprecated",
    "-fPIC",
]

_AARCH64_CROSS_LINKOPTS = select({
    "@platforms//cpu:aarch64": [
        "-L/usr/local/cuda/targets/aarch64-linux/lib",
        "-L/usr/local/cuda/targets/aarch64-linux/lib/stubs",
        "-Wl,--unresolved-symbols=ignore-in-shared-libs",
    ],
    "//conditions:default": [],
})

cc_library(
    name = "example_utils",
    srcs = glob(["utils/**/*.cpp"]),
    hdrs = glob(["utils/**/*.h"]),
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    deps = [
        "//cpp:edgellm_core",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_binary(
    name = "llm_build",
    srcs = ["llm/llm_build.cpp"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    deps = [
        "//cpp:edgellm_builder",
        "@tensorrt",
    ],
)

cc_binary(
    name = "llm_inference",
    srcs = ["llm/llm_inference.cpp"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    deps = [
        ":example_utils",
        "//cpp:edgellm_core",
        "//cpp:edgellm_tokenizer",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

cc_binary(
    name = "llm_bench",
    srcs = ["llm/llm_bench.cpp"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    deps = [
        ":example_utils",
        "//cpp:edgellm_core",
        "@tensorrt",
    ],
)

cc_binary(
    name = "visual_build",
    srcs = ["multimodal/visual_build.cpp"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    deps = [
        "//cpp:edgellm_builder",
        "@tensorrt",
    ],
)

cc_binary(
    name = "audio_build",
    srcs = ["multimodal/audio_build.cpp"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    deps = [
        "//cpp:edgellm_builder",
        "@tensorrt",
    ],
)

cc_binary(
    name = "qwen3_tts_inference",
    srcs = ["omni/qwen3_tts_inference.cpp"],
    copts = _COMMON_COPTS,
    includes = _COMMON_INCLUDE_DIRS,
    linkopts = _AARCH64_CROSS_LINKOPTS,
    deps = [
        ":example_utils",
        "//cpp:edgellm_core",
        "//cpp:edgellm_tokenizer",
        "@nlohmann_json//:json",
        "@tensorrt",
    ],
)

filegroup(
    name = "examples",
    srcs = [
        ":audio_build",
        ":llm_bench",
        ":llm_build",
        ":llm_inference",
        ":qwen3_tts_inference",
        ":visual_build",
    ],
)
